--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,9 @@ apply plugin: 'kotlin-kapt'
 
 android {
     compileSdk 32
-
+    buildFeatures {
+        viewBinding = true
+    }
     defaultConfig {
         applicationId "com.example.kotlincountries"
         minSdk 23
@@ -73,31 +75,24 @@ dependencies {
     implementation("androidx.collection:collection-ktx:1.2.0")
     implementation("androidx.fragment:fragment-ktx:1.4.1")
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-beta01")
-
-    def lifeCycleExtensionVersion = '1.1.1'
-    def supportVersion = '28.0.0'
-    def retrofitVersion = '2.3.0'
-    def glideVersion = '4.9.0'
-    def rxJavaVersion = '2.1.1'
-    def roomVersion = '2.2.3'
-    def preferencesVersion = '1.1.0'
-
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "android.arch.lifecycle:extensions:$lifeCycleExtensionVersion"
-    implementation "androidx.room:room-runtime:$roomVersion"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation "androidx.room:room-runtime:2.4.2"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
-    kapt "androidx.room:room-compiler:$roomVersion"
-    implementation "androidx.room:room-ktx:$roomVersion"
+    kapt "androidx.room:room-compiler:2.4.2"
+    implementation "androidx.room:room-ktx:2.4.2"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1"
-    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
-    implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
-    implementation "io.reactivex.rxjava2:rxandroid:$rxJavaVersion"
-    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    implementation "com.squareup.retrofit2:retrofit:2.3.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.3.0"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
+    implementation "io.reactivex.rxjava2:rxjava:2.2.6"
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+    implementation "com.github.bumptech.glide:glide:4.9.0"
     //noinspection GradleCompatible
-    implementation "com.android.support:palette-v7:$supportVersion"
+    implementation "com.android.support:palette-v7:28.0.0"
     //noinspection GradleCompatible
-    implementation "com.android.support:design:$supportVersion"
-    implementation "androidx.preference:preference:$preferencesVersion"
+    implementation "com.android.support:design:28.0.0"
+    //noinspection GradleCompatible
+    implementation "com.android.support:support-compat:28.0.0"
+    implementation "androidx.preference:preference:1.2.0"
 }
